--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,8 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +33,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -50,7 +51,7 @@ p {
     font-size: 16px;
 }
 
-.hero {
+figure {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -69,13 +70,32 @@ p {
     margin-left: 25px;
 }
 
-.content {
+article {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+
+article section{
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+article h2{
+    margin-bottom: 20px;
+    font-size: 36px
+}
+
+article img{
+    max-height: 200px;
+}
+
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,6 +106,14 @@ p {
     background-color: #2589bd;
 }
 
+aside section{
+    margin-bottom: 32px;
+    color: #ffffff;
+}
+
+/* Took them out because the code repeats*/
+
+/*
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
@@ -100,7 +128,16 @@ p {
     margin-bottom: 32px;
     color: #ffffff;
 }
+*/
 
+aside section h3{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+/*The code repeats when it can be done with one area*/
+
+/*
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
@@ -115,7 +152,15 @@ p {
     margin-bottom: 10px;
     text-align: center;
 }
+*/
 
+aside img{
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/*
 .benefit-lead img {
     display: block;
     margin: 10px auto;
@@ -133,7 +178,10 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+*/
 
+/* Made it to article section*/
+/*
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -160,7 +208,10 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+*/
 
+/*Made it to article img*/
+/*
 .search-engine-optimization img {
     max-height: 200px;
 }
@@ -187,14 +238,16 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
+*/
 
-.footer {
+
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
